# algods

./: CMakeLists.txt  README.md  TODO.md  run.sh
algods/: CMakeLists.txt
algods/arrays/: CMakeLists.txt  array.h  deque.h
algods/arrays/test/: test-array.cpp  test-deque.cpp
algods/empty/: CMakeLists.txt
algods/graphs/cpp/: graph.h
algods/graphs/python/: bread_first_paths.py  bread_first_search.py  bread_first_ucc.py  cycle_digraph.py  cycle_graph.py  depth_first_paths.py  depth_first_paths_recursive.py  depth_first_scc.py  depth_first_scc_recursive.py  depth_first_search.py  depth_first_search_recursive.py  depth_first_toposort.py  depth_first_toposort_recursive.py  depth_first_ucc.py  digraph_cycle.py  graph_cycle.py  mst_kruskal.py  mst_prim_eager.py  mst_prim_lazy.py  path_dijkstra.py  priority_queue_minmax.py
algods/graphs/python/ds/: digraph.py  edge_weighted_digraph.py  edge_weighted_graph.py  graph.py  priority_index_queue.py  (+4 more)
algods/hashing/: CMakeLists.txt  hashmap.h
algods/hashing/test/: test-hashmap.cpp  test.cpp
algods/linked/: CMakeLists.txt  bag.h  doubly-node.h  list.h  queue.h  singly-node.h  stack.h
algods/linked/test/: test-bag.cpp  test-list.cpp  test-queue.cpp  test-stack.cpp
algods/numeric/: CMakeLists.txt  array.h  array1d.h  array2d.h  array3d.h  fourier.h  histogram.h  histogram1d.h  histogram2d.h  histogram3d.h  linalg-arithmetic.h  linalg-gauss.h  linalg-jacobi.h  linalg.h  ode-euler.h  ode-gauss.h  ode-gear.h  ode-kutta.h  ode.h  sde-ito.h  sde-strat.h  sde-wiener.h  sde.h  spherical-harmonics.h
algods/numeric/test/: test-array1d.cpp  test-array1d.h  test-array2d.cpp  test-array2d.h  test-array3d.cpp  test-array3d.h  test-histogram1d.cpp  test-histogram2d.cpp  test-histogram3d.cpp  test-linalg.cpp  test-linalg.h  test-ode-kepler.cpp  test-ode-spring.cpp
algods/numeric/test/plot/: plot_hist.gnuplot  plot_ode_err_spring.gnuplot  plot_ode_kepler.gnuplot  plot_ode_spring.gnuplot
algods/searching/: CMakeLists.txt  bstree.h  kdtree-dynamic.h  kdtree-static.h  rbtree.h
algods/searching/test/: bstree.h  kdtree-dynamic.h  kdtree-static.h  rbtree.h  test-bstree.cpp  test-kdtree.cpp  test-kstree.cpp  test-rbtree.cpp  test.cpp
algods/sorting/: CMakeLists.txt  insertsort.h  is-ordered.h  merge.h  mergesort.h  partition.h  priority-queue.h  quicksort.h  selectsort.h  shellsort.h  sort.h
algods/sorting/test/: test-insertsort.h  test-mergesort.h  test-priority-queue.cpp  test-priority-queue.h  test-quicksort.h  test-selectsort.h  test-shellsort.h  test-sort.cpp  test-sort.h
algods/unionfind/: CMakeLists.txt  unionfind-templ.h  unionfind.h
algods/unionfind/test/: test-unionfind.cpp  test-unionfind.h
